# cust-temporal-worker-k8s-operator

./: .gitignore  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml
lib/charms/temporal_k8s/v0/: temporal_host_info.py
lib/charms/temporal_worker_k8s/v0/: temporal_worker.py  temporal_worker_info.py
src/: charm.py
workload/: pyproject.toml  rockcraft.yaml
workload/scripts/: start-worker.sh
workload/src/: worker.py
