# Copyright 2026 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "customer-temporal-worker-operator"
version = "0.0"
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
charm = [
    "ops==2.21.1",
    "hvac==2.3.0",
    "cosl==0.0.6",
    "pyyaml",
    # vault_kv charm lib imports this at module load time
    "pytest-interface-tester==3.3.1",
]
